test_scores/negative_dimers/features/P34947.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P34947.pkl.xz